# wordle-solver

./: Cargo.toml  LICENSE  README.md  dictionary.txt  past_answers.txt
dictionaries/: pokemon.txt
src/: lib.rs  main.rs  test.rs
