[package]
name = "wordle_solver"
license = "MIT"
description = "Solve wordle"
repository = "https://github.com/syobon-tech/wordle-solver"
version = "0.1.0"
edition = "2021"
authors = ["syobon <syobon@vivaldi.net>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
