[package]
name = "wordle_solver"
license = "MIT"
description = "Solves wordle"
repository = "https://github.com/syobocat/wordle-solver"
version = "0.1.0"
edition = "2024"
authors = ["syobon <syobon@syobon.net>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.1"
